--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   http: ^1.1.0
   get: ^4.6.6
-  cached_network_image: ^3.3.0
+  flutter_slidable: ^3.0.1
+
+#  cached_network_image: ^3.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
